added basic route setup

--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
       "node"
     ],
     "collectCoverageFrom": [
-      "src/**/*.{ts}",
+      "src/*.ts",
+      "src/**/*.ts",
       "!**/node_modules/**",
       "!**/vendor/**"
     ]
